# rust-by-practice

./: .gitignore  404.html  CNAME  Cargo.toml  ChangeLog.md  LICENCE  LICENSE-MIT  README.md  Readme.md  api.go  book.toml  comments-docs.html  deploy  deploy.sh  discovery.go  elegant-code-base.html  errors.html  flow-control.html  gdata.go  global-variables.html  index.html  macro.html  method.html  newtype-sized.html  node.go  print.html  refs.md  request.go  resend.go  searchindex.js  self-referential.html  send.go  toc.html  toc.js  variables.html  weak.html
admin/: main.go
agent/: Makefile  agent.conf  main.go
alert/: Makefile  main.go
analyze/: main.go
async/: async-await.html  future.html  intro.html  pin-unpin.html  stream.html
basic-types/: char-bool-unit.html  functions.html  intro.html  numbers.html  statements-expressions.html
bio/: Readme1.md
collections/: hashmap.html  intro.html  string.html  vector.html
collector/: main.go
compound-types/: array.html  enum.html  intro.html  slice.html  string.html  struct.html  tuple.html
crate-module/: crate.html  intro.html  module.html  use-pub.html
en/: book.toml  deploy  deploy.sh
fight-compiler/: borrowing.html  intro.html
formatted-output/: debug-display.html  formatting.html  intro.html  println.html
functional-programing/: closure.html  intro.html  iterator.html
generics-traits/: advanced-traits.html  const-generics.html  generics.html  intro.html  trait-object.html  traits.html
ro-RO/: book.toml  (+1 more)
rust-warp-jwt/: Cargo.toml  README.md
rust-warp-jwt/src/: auth.rs  error.rs  main.rs
(+490 files in other folders)
